@@ -8,10 +8,13 @@ consider-using-alias:23:6::'typing.ContextManager' will be deprecated with PY39,
 consider-using-alias:24:6::'typing.Pattern' will be deprecated with PY39, consider using 're.Pattern' instead
 consider-using-alias:25:7::'typing.Match' will be deprecated with PY39, consider using 're.Match' instead
 consider-using-alias:34:9::'typing.List' will be deprecated with PY39, consider using 'list' instead
-consider-using-alias:36:74:func1:'typing.Dict' will be deprecated with PY39, consider using 'dict' instead
-consider-using-alias:36:16:func1:'typing.List' will be deprecated with PY39, consider using 'list' instead
-consider-using-alias:36:37:func1:'typing.List' will be deprecated with PY39, consider using 'list' instead
-consider-using-alias:36:93:func1:'typing.Tuple' will be deprecated with PY39, consider using 'tuple' instead
-consider-using-alias:52:12:CustomNamedTuple:'typing.List' will be deprecated with PY39, consider using 'list' instead
-consider-using-alias:57:12:CustomTypedDict2:'typing.List' will be deprecated with PY39, consider using 'list' instead
-consider-using-alias:61:12:CustomDataClass:'typing.List' will be deprecated with PY39, consider using 'list' instead
+consider-using-alias:36:7::'typing.Type' will be deprecated with PY39, consider using 'type' instead
+consider-using-alias:37:7::'typing.Tuple' will be deprecated with PY39, consider using 'tuple' instead
+consider-using-alias:38:7::'typing.Callable' will be deprecated with PY39, consider using 'collections.abc.Callable' instead
+consider-using-alias:44:74:func1:'typing.Dict' will be deprecated with PY39, consider using 'dict' instead
+consider-using-alias:44:16:func1:'typing.List' will be deprecated with PY39, consider using 'list' instead
+consider-using-alias:44:37:func1:'typing.List' will be deprecated with PY39, consider using 'list' instead
+consider-using-alias:44:93:func1:'typing.Tuple' will be deprecated with PY39, consider using 'tuple' instead
+consider-using-alias:60:12:CustomNamedTuple:'typing.List' will be deprecated with PY39, consider using 'list' instead
+consider-using-alias:65:12:CustomTypedDict2:'typing.List' will be deprecated with PY39, consider using 'list' instead
+consider-using-alias:69:12:CustomDataClass:'typing.List' will be deprecated with PY39, consider using 'list' instead
