@@ -12,14 +12,17 @@ deprecated-typing-alias:29:9::'typing.Dict' is deprecated, use 'dict' instead
 deprecated-typing-alias:29:19::'typing.List' is deprecated, use 'list' instead
 deprecated-typing-alias:30:20::'typing.List' is deprecated, use 'list' instead
 deprecated-typing-alias:31:9::'typing.List' is deprecated, use 'list' instead
-deprecated-typing-alias:33:74:func1:'typing.Dict' is deprecated, use 'dict' instead
-deprecated-typing-alias:33:16:func1:'typing.List' is deprecated, use 'list' instead
-deprecated-typing-alias:33:37:func1:'typing.List' is deprecated, use 'list' instead
-deprecated-typing-alias:33:93:func1:'typing.Tuple' is deprecated, use 'tuple' instead
-deprecated-typing-alias:40:20:CustomIntList:'typing.List' is deprecated, use 'list' instead
-deprecated-typing-alias:44:28::'typing.List' is deprecated, use 'list' instead
-deprecated-typing-alias:46:14::'typing.List' is deprecated, use 'list' instead
-deprecated-typing-alias:49:12:CustomNamedTuple:'typing.List' is deprecated, use 'list' instead
-deprecated-typing-alias:51:56::'typing.List' is deprecated, use 'list' instead
-deprecated-typing-alias:54:12:CustomTypedDict2:'typing.List' is deprecated, use 'list' instead
-deprecated-typing-alias:58:12:CustomDataClass:'typing.List' is deprecated, use 'list' instead
+deprecated-typing-alias:33:7::'typing.Type' is deprecated, use 'type' instead
+deprecated-typing-alias:34:7::'typing.Tuple' is deprecated, use 'tuple' instead
+deprecated-typing-alias:35:7::'typing.Callable' is deprecated, use 'collections.abc.Callable' instead
+deprecated-typing-alias:41:74:func1:'typing.Dict' is deprecated, use 'dict' instead
+deprecated-typing-alias:41:16:func1:'typing.List' is deprecated, use 'list' instead
+deprecated-typing-alias:41:37:func1:'typing.List' is deprecated, use 'list' instead
+deprecated-typing-alias:41:93:func1:'typing.Tuple' is deprecated, use 'tuple' instead
+deprecated-typing-alias:48:20:CustomIntList:'typing.List' is deprecated, use 'list' instead
+deprecated-typing-alias:52:28::'typing.List' is deprecated, use 'list' instead
+deprecated-typing-alias:54:14::'typing.List' is deprecated, use 'list' instead
+deprecated-typing-alias:57:12:CustomNamedTuple:'typing.List' is deprecated, use 'list' instead
+deprecated-typing-alias:59:56::'typing.List' is deprecated, use 'list' instead
+deprecated-typing-alias:62:12:CustomTypedDict2:'typing.List' is deprecated, use 'list' instead
+deprecated-typing-alias:66:12:CustomDataClass:'typing.List' is deprecated, use 'list' instead
