@@ -84,6 +84,11 @@ Release date: TBA
 
   Closes #5048
 
+* ``TypingChecker``
+
+  * Fix false-negative for ``deprecated-typing-alias`` and ``consider-using-alias``
+    with ``typing.Type`` + ``typing.Callable``.
+
 
 What's New in Pylint 2.11.1?
 ============================
